--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "co-redis": "^2.1.0",
     "co-views": "^2.1.0",
     "coffee-reactify": "^5.0.0",
+    "dotenv": "^4.0.0",
     "gm": "^1.22.0",
     "gulp-bower": "^0.0.13",
     "gulp.spritesmith": "^6.2.1",
@@ -38,6 +39,7 @@
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "lodash": "^4.15.0",
+    "log4js": "^2.3.5",
     "mkdirp": "^0.5.1",
     "mongodb": "~1.4",
     "monk": "^6.0.4",
